Integrate sticky note and red pin into HTML

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Bản thân tui cũng từng nhiều lần bị loại, mỗi lần như thế t
       const pass = document.getElementById('pass').value;
       const error = document.getElementById('error');
 
-      if(user === "friend" && pass === "love") {
+      if(user === "Nguyễn Như Sương An" && pass === "Văn") {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('envelope-screen').style.display = 'flex';
       } else {
@@ -320,4 +320,5 @@ Bản thân tui cũng từng nhiều lần bị loại, mỗi lần như thế t
   </script>
 
 </body>
+
 </html>
