--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Bản thân tui cũng từng nhiều lần bị loại, mỗi lần như thế t
       const pass = document.getElementById('pass').value;
       const error = document.getElementById('error');
 
-      if(user === "Nguyễn Như Sương An" && pass === "Van") {
+      if(user === "Nguyễn Như Sương An" && pass === "van") {
         document.getElementById('login-screen').style.display = 'none';
         document.getElementById('envelope-screen').style.display = 'flex';
       } else {
@@ -322,4 +322,5 @@ Bản thân tui cũng từng nhiều lần bị loại, mỗi lần như thế t
 </body>
 
 </html>
+
 
